[tool.poetry]
name = "probability-calculator"
version = "0.1.0"
description = ""
authors = ["alivemary <alivemary@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
